--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.3.3",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
